2008-12-01  Massimiliano Mantione <massi@ximian.com>
	* HeapExplorerTreeModel.cs: Linked all root nodes n a list, so that it
	is possible to find the allocation event of a given heap object (now
	IRootNode implements the ProviderOfPreviousAllocationsSets interface).
	* HeapSnapshotExplorer.cs: Created class StatisticsNodeMenuHandler
	(implemented for classes, methods and call stacks) to rationalize the
	hadling of menus), and turned ClassStatisticsNode into a more general
	StatisticsNode because now it works with all the three abov concepts.
	* LoadedClassChooser.cs: Make the dialog work with methods and call
	stacks instead of just classes.

2008-11-03  Massimiliano Mantione <massi@ximian.com>
	* HeapExplorerTreeModel.cs: Massive refactory of "Node" class, making
	it generic in terms of the node contents (HeapObject-AllocatedObject).
	Moreover, made so that each node type can choose its own context menu.
	* HeapSnapshotExplorer.cs: Likewise.
	* LoadedClassChooser.cs: Likewise.
	* HeapExplorerActions.cs: Likewise.
	* gtk-gui/gui.stetic: Likewise.

2008-10-13  Massimiliano Mantione <massi@ximian.com>
	* HeapExplorerTreeModel.cs: Use new HeapObject non-generic class.

2008-08-12  Massimiliano Mantione <massi@ximian.com>
	* Makefile.am: Fixed for integration into mono-tools;

2008-08-04  Massimiliano Mantione <massi@ximian.com>
	Removed .pc file generation.

2008-08-01  Massimiliano Mantione <massi@ximian.com>
	* Makefile.am, gtk-gui/gui.stetic heap-snapshot-explorer.mdp: renamed
	output assembly.